--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI = mongodb+srv://vamshikrishna:AFAGPn4p32EK61rq@cluster0.hd77p.mongodb.net/FlyBlog?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://vamshikrishna:vamshikrishna@1234@cluster0.hd77p.mongodb.net/FlyBlog?retryWrites=true&w=majority
 PORT = 8080
+
