--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "BlogPost",
+  "name": "flyblog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
